# aircraft_seam_measurement

./: .editorconfig  .gitignore  APP_SDK_CUSTOMIZATION_NOTES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: gap_flush.yaml
docs/: algo_vs_manual_template.csv  optimization_log.md  thesis_figures.md
scripts/draw/: _style.py  ch3_fig1_depth_image_demo.py  ch3_fig5_augmentation_demo.py  ch3_fig6_patch_sampling.py  ch3_fig7_train_curves.py  ch3_fig8_seg_triplet.py  ch4_fig2_pca_direction.py  ch4_fig3_section_sampling.py  ch4_fig4_top_surface_stages.py  ch4_fig5_single_section_edges.py  ch4_fig8_gap_flush_profile.py  ch4_fig_gap_3d_definition.py  ch6_fig11_timing_breakdown.py  ch6_fig3_train_samples_grid.py  ch6_fig5_model_compare_bars.py  ch6_fig6_hard_cases.py  ch6_fig7_8_error_histograms.py  ch6_fig9_scatter_bland_altman.py  show_crop_pcd_open3d.py
scripts/eval/: compare_checkpoints.py  param_sensitivity.py
scripts/preprocess/: extract_depth_from_pcd.py  manual_crop_bmp_pcd.py  manual_seam_mask_editor.py
scripts/train/: run_loocv_experiments.py  train_real_only_model.py
src/pipeline/: __init__.py  __main__.py  gap_flush.py  help.md  outputs.py  timing.py  viewer3d.py  viewer3d_entry.py
src/pipeline/seam_mapping/: __init__.py  extraction.py  inference.py  io.py
src/seam_training/: config.json  data.py  model.py  preview.py  train.py  utils.py
tests/: conftest.py  test_geometry.py  test_geometry_3d.py  test_helpers.py  test_params.py  test_pcd_io.py  test_robust_line_fit.py  test_top_surface_helpers.py
(+13 files in other folders)
