[project]
name = "aircraft-seam-measurement"
version = "0.1.0"
description = "Gap/flush measurement pipeline for aircraft skin seams from 3D line-scanner point clouds."
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["outputs", "data", "app"]

[tool.ruff.lint]
# Conservative starter rules. Tighten over time; do not block existing code
# on stylistic rules until a dedicated cleanup pass is scheduled.
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line-length - leave to the formatter
    "E741",  # ambiguous variable names (l, I) are common in math code
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]      # scripts mutate sys.path before imports
"src/pipeline/__main__.py" = ["E402"]
